--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rupert648/stacshack2020#readme",
   "dependencies": {
-    "firebase-admin": "^8.9.2"
+    "firebase-admin": "^8.9.2",
+    "sqlite3": "^4.1.1"
   }
 }
